updated title. added sql to skills

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Kevin Hutchings - Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -103,6 +103,12 @@
                         <div class="mt-5">
                             <div class="mb-2"><img src="./assets/img/express.png" class="skills-icon" alt="Express JS logo"/></div>
                             <h3 class="h4 mb-2">Express</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><img src="./assets/img/Sql_data_base_with_logo.png" class="skills-icon" alt="SQL logo"/></div>
+                            <h3 class="h4 mb-2">SQL</h3>
                         </div>
                     </div>
                 </div>
