added target: _blank to anchor tags to open links in new tab

--- a/index.html
+++ b/index.html
@@ -237,10 +237,14 @@
               track titles.
             </p>
             <div class="project-links">
-              <a href="https://project-ghibli-wrpt3.herokuapp.com/#/movies"
+              <a
+                href="https://project-ghibli-wrpt3.herokuapp.com/#/movies"
+                target="_blank"
                 >Live Site</a
               >
-              <a href="https://github.com/Kevin-Hutchings/personal-project"
+              <a
+                href="https://github.com/Kevin-Hutchings/personal-project"
+                target="_blank"
                 >GitHub</a
               >
             </div>
@@ -268,7 +272,9 @@
               most importantly play music from a playlist or album.
             </p>
             <div class="project-links">
-              <a href="https://www.github.com/WRPT3-clone-with-merch/Spotify"
+              <a
+                href="https://www.github.com/WRPT3-clone-with-merch/Spotify"
+                target="_blank"
                 >GitHub</a
               >
             </div>
